openexr-sys/openexr-c/include/imath_vec.h

typedef struct Imath_3_0__Vec4_int__t_s {
    int x;
    int y;
    int z;
    int w;
} OPENEXR_ALIGN(4) Imath_3_0__Vec4_int__t;
typedef Imath_3_0__Vec4_int__t Imath_Vec4_t;
typedef struct Imath_3_0__Vec4_long__t_s {
    long x;
    long y;
    long z;
    long w;
} OPENEXR_ALIGN(8) Imath_3_0__Vec4_long__t;
typedef Imath_3_0__Vec4_long__t Imath_V4i64_t;
typedef struct Imath_3_0__Vec4_float__t_s {
    float x;
    float y;
    float z;
    float w;
} OPENEXR_ALIGN(4) Imath_3_0__Vec4_float__t;
typedef Imath_3_0__Vec4_float__t Imath_V4f_t;
typedef struct Imath_3_0__Vec4_double__t_s {
    double x;
    double y;
    double z;
    double w;
} OPENEXR_ALIGN(8) Imath_3_0__Vec4_double__t;
typedef Imath_3_0__Vec4_double__t Imath_V4d_t;
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_imul_1(
    Imath_Vec4_t * this_
    , Imath_Vec4_t const * * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_mul(
    Imath_Vec4_t const * this_
    , Imath_Vec4_t * return_
    , Imath_Vec4_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_mul_1(
    Imath_Vec4_t const * this_
    , Imath_Vec4_t * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_idiv(
    Imath_Vec4_t * this_
    , Imath_Vec4_t const * * return_
    , Imath_Vec4_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_idiv_1(
    Imath_Vec4_t * this_
    , Imath_Vec4_t const * * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_div(
    Imath_Vec4_t const * this_
    , Imath_Vec4_t * return_
    , Imath_Vec4_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_int___op_div_1(
    Imath_Vec4_t const * this_
    , Imath_Vec4_t * return_
    , int a);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__length2(
    Imath_Vec4_t const * this_
    , int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__baseTypeLowest(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__baseTypeMax(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__baseTypeSmallest(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__baseTypeEpsilon(
    int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_int__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__index(
    Imath_V4i64_t * this_
    , long * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__index_const(
    Imath_V4i64_t const * this_
    , long const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__ctor(
    Imath_V4i64_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__ctor_1(
    Imath_V4i64_t * this_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__ctor_2(
    Imath_V4i64_t * this_
    , long a
    , long b
    , long c
    , long d);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__copy(
    Imath_V4i64_t * this_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___assign(
    Imath_V4i64_t * this_
    , Imath_V4i64_t const * * return_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__dtor(
    Imath_V4i64_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__equalWithAbsError(
    Imath_V4i64_t const * this_
    , _Bool * return_
    , Imath_V4i64_t const * v
    , long e);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__equalWithRelError(
    Imath_V4i64_t const * this_
    , _Bool * return_
    , Imath_V4i64_t const * v
    , long e);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__dot(
    Imath_V4i64_t const * this_
    , long * return_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_add(
    Imath_V4i64_t const * this_
    , Imath_V4i64_t * return_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_isub(
    Imath_V4i64_t * this_
    , Imath_V4i64_t const * * return_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_sub(
    Imath_V4i64_t const * this_
    , Imath_V4i64_t * return_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_sub_1(
    Imath_V4i64_t const * this_
    , Imath_V4i64_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__negate(
    Imath_V4i64_t * this_
    , Imath_V4i64_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_imul(
    Imath_V4i64_t * this_
    , Imath_V4i64_t const * * return_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_imul_1(
    Imath_V4i64_t * this_
    , Imath_V4i64_t const * * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_mul(
    Imath_V4i64_t const * this_
    , Imath_V4i64_t * return_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_mul_1(
    Imath_V4i64_t const * this_
    , Imath_V4i64_t * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_idiv(
    Imath_V4i64_t * this_
    , Imath_V4i64_t const * * return_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_idiv_1(
    Imath_V4i64_t * this_
    , Imath_V4i64_t const * * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_div(
    Imath_V4i64_t const * this_
    , Imath_V4i64_t * return_
    , Imath_V4i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_long___op_div_1(
    Imath_V4i64_t const * this_
    , Imath_V4i64_t * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__length2(
    Imath_V4i64_t const * this_
    , long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__baseTypeLowest(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__baseTypeMax(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__baseTypeSmallest(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__baseTypeEpsilon(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_long__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__index(
    Imath_V4f_t * this_
    , float * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__index_const(
    Imath_V4f_t const * this_
    , float const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__ctor(
    Imath_V4f_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__ctor_1(
    Imath_V4f_t * this_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__ctor_2(
    Imath_V4f_t * this_
    , float a
    , float b
    , float c
    , float d);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__ctor_3(
    Imath_V4f_t * this_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___assign(
    Imath_V4f_t * this_
    , Imath_V4f_t const * * return_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__dtor(
    Imath_V4f_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__equalWithAbsError(
    Imath_V4f_t const * this_
    , _Bool * return_
    , Imath_V4f_t const * v
    , float e);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__equalWithRelError(
    Imath_V4f_t const * this_
    , _Bool * return_
    , Imath_V4f_t const * v
    , float e);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__dot(
    Imath_V4f_t const * this_
    , float * return_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_add(
    Imath_V4f_t const * this_
    , Imath_V4f_t * return_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_isub(
    Imath_V4f_t * this_
    , Imath_V4f_t const * * return_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_sub(
    Imath_V4f_t const * this_
    , Imath_V4f_t * return_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_sub_1(
    Imath_V4f_t const * this_
    , Imath_V4f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__negate(
    Imath_V4f_t * this_
    , Imath_V4f_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_imul(
    Imath_V4f_t * this_
    , Imath_V4f_t const * * return_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_imul_1(
    Imath_V4f_t * this_
    , Imath_V4f_t const * * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_mul(
    Imath_V4f_t const * this_
    , Imath_V4f_t * return_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_mul_1(
    Imath_V4f_t const * this_
    , Imath_V4f_t * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_idiv(
    Imath_V4f_t * this_
    , Imath_V4f_t const * * return_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_idiv_1(
    Imath_V4f_t * this_
    , Imath_V4f_t const * * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_div(
    Imath_V4f_t const * this_
    , Imath_V4f_t * return_
    , Imath_V4f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_float___op_div_1(
    Imath_V4f_t const * this_
    , Imath_V4f_t * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__length(
    Imath_V4f_t const * this_
    , float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__length2(
    Imath_V4f_t const * this_
    , float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__normalize(
    Imath_V4f_t * this_
    , Imath_V4f_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__normalizeNonNull(
    Imath_V4f_t * this_
    , Imath_V4f_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__normalized(
    Imath_V4f_t const * this_
    , Imath_V4f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__normalizedNonNull(
    Imath_V4f_t const * this_
    , Imath_V4f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__baseTypeLowest(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__baseTypeMax(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__baseTypeSmallest(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__baseTypeEpsilon(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_float__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__index(
    Imath_V4d_t * this_
    , double * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__index_const(
    Imath_V4d_t const * this_
    , double const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__ctor(
    Imath_V4d_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__ctor_1(
    Imath_V4d_t * this_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__ctor_2(
    Imath_V4d_t * this_
    , double a
    , double b
    , double c
    , double d);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__ctor_3(
    Imath_V4d_t * this_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___assign(
    Imath_V4d_t * this_
    , Imath_V4d_t const * * return_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__dtor(
    Imath_V4d_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__equalWithAbsError(
    Imath_V4d_t const * this_
    , _Bool * return_
    , Imath_V4d_t const * v
    , double e);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__equalWithRelError(
    Imath_V4d_t const * this_
    , _Bool * return_
    , Imath_V4d_t const * v
    , double e);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__dot(
    Imath_V4d_t const * this_
    , double * return_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_add(
    Imath_V4d_t const * this_
    , Imath_V4d_t * return_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_isub(
    Imath_V4d_t * this_
    , Imath_V4d_t const * * return_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_sub(
    Imath_V4d_t const * this_
    , Imath_V4d_t * return_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_sub_1(
    Imath_V4d_t const * this_
    , Imath_V4d_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__negate(
    Imath_V4d_t * this_
    , Imath_V4d_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_imul(
    Imath_V4d_t * this_
    , Imath_V4d_t const * * return_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_imul_1(
    Imath_V4d_t * this_
    , Imath_V4d_t const * * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_mul(
    Imath_V4d_t const * this_
    , Imath_V4d_t * return_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_mul_1(
    Imath_V4d_t const * this_
    , Imath_V4d_t * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_idiv(
    Imath_V4d_t * this_
    , Imath_V4d_t const * * return_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_idiv_1(
    Imath_V4d_t * this_
    , Imath_V4d_t const * * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_div(
    Imath_V4d_t const * this_
    , Imath_V4d_t * return_
    , Imath_V4d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec4_double___op_div_1(
    Imath_V4d_t const * this_
    , Imath_V4d_t * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__length(
    Imath_V4d_t const * this_
    , double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec4_double__length2(
    Imath_V4d_t const * this_
    , double * return_);