openexr-sys/src/imath_vec.rs


pub fn Imath_3_0__Vec4_int___op_imul_1(this_: *mut Imath_Vec4_t, return_: *mut *const Imath_Vec4_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int___op_mul(this_: *const Imath_Vec4_t, return_: *mut Imath_Vec4_t, v: *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int___op_mul_1(this_: *const Imath_Vec4_t, return_: *mut Imath_Vec4_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int___op_idiv(this_: *mut Imath_Vec4_t, return_: *mut *const Imath_Vec4_t, v: *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int___op_idiv_1(this_: *mut Imath_Vec4_t, return_: *mut *const Imath_Vec4_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int___op_div(this_: *const Imath_Vec4_t, return_: *mut Imath_Vec4_t, v: *const Imath_Vec4_t) -> Exception;

pub fn Imath_3_0__Vec4_int___op_div_1(this_: *const Imath_Vec4_t, return_: *mut Imath_Vec4_t, a: c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__length2(this_: *const Imath_Vec4_t, return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__baseTypeLowest(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__baseTypeMax(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__baseTypeSmallest(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__baseTypeEpsilon(return_: *mut c_int) -> Exception;

pub fn Imath_3_0__Vec4_int__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec4_long__index(this_: *mut Imath_V4i64_t, return_: *mut *mut c_long, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_long__index_const(this_: *const Imath_V4i64_t, return_: *mut *const c_long, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_long__ctor(this_: *mut Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long__ctor_1(this_: *mut Imath_V4i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__ctor_2(this_: *mut Imath_V4i64_t, a: c_long, b: c_long, c: c_long, d: c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__copy(this_: *mut Imath_V4i64_t, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___assign(this_: *mut Imath_V4i64_t, return_: *mut *const Imath_V4i64_t, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long__dtor(this_: *mut Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long__equalWithAbsError(this_: *const Imath_V4i64_t, return_: *mut bool, v: *const Imath_V4i64_t, e: c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__equalWithRelError(this_: *const Imath_V4i64_t, return_: *mut bool, v: *const Imath_V4i64_t, e: c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__dot(this_: *const Imath_V4i64_t, return_: *mut c_long, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___op_add(this_: *const Imath_V4i64_t, return_: *mut Imath_V4i64_t, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___op_isub(this_: *mut Imath_V4i64_t, return_: *mut *const Imath_V4i64_t, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___op_sub(this_: *const Imath_V4i64_t, return_: *mut Imath_V4i64_t, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___op_sub_1(this_: *const Imath_V4i64_t, return_: *mut Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long__negate(this_: *mut Imath_V4i64_t, return_: *mut *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___op_imul(this_: *mut Imath_V4i64_t, return_: *mut *const Imath_V4i64_t, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___op_imul_1(this_: *mut Imath_V4i64_t, return_: *mut *const Imath_V4i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec4_long___op_mul(this_: *const Imath_V4i64_t, return_: *mut Imath_V4i64_t, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___op_mul_1(this_: *const Imath_V4i64_t, return_: *mut Imath_V4i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec4_long___op_idiv(this_: *mut Imath_V4i64_t, return_: *mut *const Imath_V4i64_t, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___op_idiv_1(this_: *mut Imath_V4i64_t, return_: *mut *const Imath_V4i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec4_long___op_div(this_: *const Imath_V4i64_t, return_: *mut Imath_V4i64_t, v: *const Imath_V4i64_t) -> Exception;

pub fn Imath_3_0__Vec4_long___op_div_1(this_: *const Imath_V4i64_t, return_: *mut Imath_V4i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__length2(this_: *const Imath_V4i64_t, return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__baseTypeLowest(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__baseTypeMax(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__baseTypeSmallest(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__baseTypeEpsilon(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec4_long__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec4_float__index(this_: *mut Imath_V4f_t, return_: *mut *mut c_float, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_float__index_const(this_: *const Imath_V4f_t, return_: *mut *const c_float, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_float__ctor(this_: *mut Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float__ctor_1(this_: *mut Imath_V4f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__ctor_2(this_: *mut Imath_V4f_t, a: c_float, b: c_float, c: c_float, d: c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__ctor_3(this_: *mut Imath_V4f_t, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___assign(this_: *mut Imath_V4f_t, return_: *mut *const Imath_V4f_t, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float__dtor(this_: *mut Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float__equalWithAbsError(this_: *const Imath_V4f_t, return_: *mut bool, v: *const Imath_V4f_t, e: c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__equalWithRelError(this_: *const Imath_V4f_t, return_: *mut bool, v: *const Imath_V4f_t, e: c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__dot(this_: *const Imath_V4f_t, return_: *mut c_float, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___op_add(this_: *const Imath_V4f_t, return_: *mut Imath_V4f_t, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___op_isub(this_: *mut Imath_V4f_t, return_: *mut *const Imath_V4f_t, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___op_sub(this_: *const Imath_V4f_t, return_: *mut Imath_V4f_t, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___op_sub_1(this_: *const Imath_V4f_t, return_: *mut Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float__negate(this_: *mut Imath_V4f_t, return_: *mut *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___op_imul(this_: *mut Imath_V4f_t, return_: *mut *const Imath_V4f_t, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___op_imul_1(this_: *mut Imath_V4f_t, return_: *mut *const Imath_V4f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec4_float___op_mul(this_: *const Imath_V4f_t, return_: *mut Imath_V4f_t, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___op_mul_1(this_: *const Imath_V4f_t, return_: *mut Imath_V4f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec4_float___op_idiv(this_: *mut Imath_V4f_t, return_: *mut *const Imath_V4f_t, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___op_idiv_1(this_: *mut Imath_V4f_t, return_: *mut *const Imath_V4f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec4_float___op_div(this_: *const Imath_V4f_t, return_: *mut Imath_V4f_t, v: *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float___op_div_1(this_: *const Imath_V4f_t, return_: *mut Imath_V4f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__length(this_: *const Imath_V4f_t, return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__length2(this_: *const Imath_V4f_t, return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__normalize(this_: *mut Imath_V4f_t, return_: *mut *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float__normalizeNonNull(this_: *mut Imath_V4f_t, return_: *mut *const Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float__normalized(this_: *const Imath_V4f_t, return_: *mut Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float__normalizedNonNull(this_: *const Imath_V4f_t, return_: *mut Imath_V4f_t) -> Exception;

pub fn Imath_3_0__Vec4_float__baseTypeLowest(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__baseTypeMax(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__baseTypeSmallest(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__baseTypeEpsilon(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec4_float__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec4_double__index(this_: *mut Imath_V4d_t, return_: *mut *mut c_double, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_double__index_const(this_: *const Imath_V4d_t, return_: *mut *const c_double, i: c_int) -> Exception;

pub fn Imath_3_0__Vec4_double__ctor(this_: *mut Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double__ctor_1(this_: *mut Imath_V4d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__ctor_2(this_: *mut Imath_V4d_t, a: c_double, b: c_double, c: c_double, d: c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__ctor_3(this_: *mut Imath_V4d_t, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___assign(this_: *mut Imath_V4d_t, return_: *mut *const Imath_V4d_t, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double__dtor(this_: *mut Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double__equalWithAbsError(this_: *const Imath_V4d_t, return_: *mut bool, v: *const Imath_V4d_t, e: c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__equalWithRelError(this_: *const Imath_V4d_t, return_: *mut bool, v: *const Imath_V4d_t, e: c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__dot(this_: *const Imath_V4d_t, return_: *mut c_double, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___op_add(this_: *const Imath_V4d_t, return_: *mut Imath_V4d_t, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___op_isub(this_: *mut Imath_V4d_t, return_: *mut *const Imath_V4d_t, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___op_sub(this_: *const Imath_V4d_t, return_: *mut Imath_V4d_t, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___op_sub_1(this_: *const Imath_V4d_t, return_: *mut Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double__negate(this_: *mut Imath_V4d_t, return_: *mut *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___op_imul(this_: *mut Imath_V4d_t, return_: *mut *const Imath_V4d_t, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___op_imul_1(this_: *mut Imath_V4d_t, return_: *mut *const Imath_V4d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec4_double___op_mul(this_: *const Imath_V4d_t, return_: *mut Imath_V4d_t, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___op_mul_1(this_: *const Imath_V4d_t, return_: *mut Imath_V4d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec4_double___op_idiv(this_: *mut Imath_V4d_t, return_: *mut *const Imath_V4d_t, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___op_idiv_1(this_: *mut Imath_V4d_t, return_: *mut *const Imath_V4d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec4_double___op_div(this_: *const Imath_V4d_t, return_: *mut Imath_V4d_t, v: *const Imath_V4d_t) -> Exception;

pub fn Imath_3_0__Vec4_double___op_div_1(this_: *const Imath_V4d_t, return_: *mut Imath_V4d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__length(this_: *const Imath_V4d_t, return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec4_double__length2(this_: *const Imath_V4d_t, return_: *mut c_double) -> Exception;
